tests/spec/build/snapshots/bound_result_from_generic_method_keeps_tagged_return.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Resultant(arg int) (int, Face) {
	return arg, nil
}

type Holder struct {
	N int
}

func Holder_Resolve[R any, E any](self Holder, f func(int) lisette.Result[R, E]) lisette.Result[R, E] {
	return f(self.N)
}

func main() {
	cb := Resultant
	rez := Holder_Resolve(Holder{N: 4}, func(arg0 int) lisette.Result[int, Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakeResultErr[int, Face](ret_1)
		} else {
			return lisette.MakeResultOk[int, Face](ret)
		}
	})
	_ = rez
}
