tests/spec/build/snapshots/builtin_named_package_qualifier_consistent_in_match.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	print_ "github.com/user/myproject/print"
)

func main() {
	level := print_.Pick()
	if level.Tag == print_.LevelLow {
		fmt.Println("low")
	} else {
		fmt.Println("high")
	}
	x := 9
	if x == print_.Limit {
		fmt.Println("limit")
	} else {
		fmt.Println("other")
	}
}


// === print/mod.go ===
package print_

func MakeLevelLow() Level {
	return Level{Tag: LevelLow}
}

func MakeLevelHigh() Level {
	return Level{Tag: LevelHigh}
}

type LevelTag uint8

const (
	LevelLow LevelTag = iota
	LevelHigh
)

type Level struct {
	Tag LevelTag
}

const Limit int = 9

func Pick() Level {
	return MakeLevelHigh()
}
