tests/spec/build/snapshots/cast_shift_imported_package_const_count_needs_no_pin.snap
---
source: tests/spec/build/mod.rs
---
// === config/config.go ===
package config

const Shift int = 60 + 8


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/config"
)

func main() {
	fmt.Println(float64(1 << config.Shift))
}
