tests/spec/build/snapshots/comma_ok_fn_arg_emits_lowered_for_generic_method_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Holder struct {
	N int
}

func Holder_Resolve[R any](self Holder, f func(int) (R, bool)) (R, bool) {
	return f(self.N)
}

func main() {
	rez := lisette.OptionFromCommaOk[int](Holder_Resolve(Holder{N: 5}, func(x int) (int, bool) {
		return x, true
	}))
	_ = rez
}
