tests/spec/build/snapshots/cross_file_inferred_go_type_emits_matching_import.snap
---
source: tests/spec/build/mod.rs
---
// === helper.go ===
package main

import t "time"

func Count(_ []t.Duration) int {
	return 0
}


// === main.go ===
package main

import (
	"fmt"
	"time"
)

func main() {
	fmt.Println(Count([]time.Duration{}))
}
